[tool.poetry]
name = "reorient-nii"
version = "0.1.0"
description = ""
authors = ["aptinis <8akp1@queensu.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
nibabel = "^3.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.5"
reorder-python-imports = "^3.0.1"
pre-commit = "^2.18.1"
bump2version = "^1.0.1"
gitig = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
