[tool.poetry]
name = "reorient-nii"
version = "1.0.0"
description = "Load and reorient nifti images"
authors = ["aptinis <8akp1@queensu.ca>"]
license = "Apache-2.0"

readme = "README.md"

homepage = "https://github.com/aptinis/reorient-nii"
repository = "https://github.com/aptinis/reorient-nii"
documentation = "https://github.com/aptinis/reorient-nii"

[tool.poetry.dependencies]
python = "^3.8"
nibabel = "^3.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.5"
reorder-python-imports = "^3.0.1"
pre-commit = "^2.18.1"
bump2version = "^1.0.1"
gitig = "^1.0.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
